--- a/index.html
+++ b/index.html
@@ -33,20 +33,19 @@
     }
 
     .app {
-      width: 100%;
-      max-width: 1100px;
-      background: linear-gradient(145deg, rgba(15,23,42,0.96), rgba(2,6,23,0.98));
-      border-radius: 24px;
-      border: 1px solid rgba(148,163,184,0.12);
-      box-shadow:
-        0 30px 80px rgba(0,0,0,0.7),
-        0 0 0 1px rgba(15,23,42,0.9) inset;
-      padding: 16px 18px 18px;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-      max-height: 100vh;
-      overflow: auto;
+          width: 100%;
+          max-width: 1100px;
+          background: linear-gradient(145deg, rgba(15,23,42,0.96), rgba(2,6,23,0.98));
+          border-radius: 24px;
+          border: 1px solid rgba(148,163,184,0.12);
+          box-shadow:
+            0 30px 80px rgba(0,0,0,0.7),
+            0 0 0 1px rgba(15,23,42,0.9) inset;
+          padding: 16px 18px 18px;
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
+          /* убрали max-height и overflow, пусть скролл будет у всей страницы */
     }
 
     header {
@@ -1891,3 +1890,4 @@
 </script>
 </body>
 </html>
+
