--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     }
 
     .app {
-          width: 100%;
-          max-width: 1100px;
-          background: linear-gradient(145deg, rgba(15,23,42,0.96), rgba(2,6,23,0.98));
-          border-radius: 24px;
-          border: 1px solid rgba(148,163,184,0.12);
-          box-shadow:
-            0 30px 80px rgba(0,0,0,0.7),
-            0 0 0 1px rgba(15,23,42,0.9) inset;
-          padding: 16px 18px 18px;
-          display: flex;
-          flex-direction: column;
-          gap: 16px;
-          /* убрали max-height и overflow, пусть скролл будет у всей страницы */
+      width: 100%;
+      max-width: 1100px;
+      background: linear-gradient(145deg, rgba(15,23,42,0.96), rgba(2,6,23,0.98));
+      border-radius: 24px;
+      border: 1px solid rgba(148,163,184,0.12);
+      box-shadow:
+        0 30px 80px rgba(0,0,0,0.7),
+        0 0 0 1px rgba(15,23,42,0.9) inset;
+      padding: 16px 18px 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      /* ВАЖНО: убрали max-height и overflow, чтобы страница прокручивалась нормально */
     }
 
     header {
@@ -396,7 +396,6 @@
     }
     .range-inline span { font-size: 14px; color: var(--text-soft); }
 
-    /* scroll */
     ::-webkit-scrollbar { width: 6px; }
     ::-webkit-scrollbar-track { background: #020617; }
     ::-webkit-scrollbar-thumb { background: #1f2937; border-radius: 999px; }
@@ -513,7 +512,6 @@
       .app {
         padding: 10px;
         border-radius: 18px;
-        max-height: none;
       }
 
       header {
@@ -1890,4 +1888,5 @@
 </script>
 </body>
 </html>
+
 
